Fix failing unit tests

--- a/locale/en-us.yaml
+++ b/locale/en-us.yaml
@@ -1090,7 +1090,7 @@ sample_yaml:
     # This script uses a secret. Note that you can define your own secrets at
     # https://platform.activestate.com/{{.Owner}}/{{.Project}}/scripts
       - name: helloWorld
-        language: {{.Shell}}
+        languages: [{{.Shell}}]
         value: echo ${secrets.user.world}
     events:
       # This is the ACTIVATE event, it will run whenever a new virtual environment is created (eg. by running `state activate`)
