--- a/locale/en-us.yaml
+++ b/locale/en-us.yaml
@@ -1079,17 +1079,23 @@ sample_yaml_perl:
       - name: activationMessage
         language: perl
         value: |
-          print "You are now in an 'activated state', this will give you a virtual environment to work in that doesn't affect the rest of your system.\n\n";
-          print "Your 'activated state' allows you to manage packages, scripts, secrets and more via the activestate.yaml file at the root of your project directory.\n\n";
-          print "To manage packages use the `state packages` command. For more information about package management, use `state packages --help`. For more information about the State Tool use `state help`.\n\n";
-          print "To access additional features of the ActiveState Platform and use a web-based interface for managing your project, you can visit https://platform.activestate.com/{{.Owner}}/{{.Project}}.\n\n";
-          print "Edit your activestate.yaml to remove this message.\n\n";
+          print <<EOT;
+          You are now in an 'activated state', this will give you a virtual environment to work in that doesn't affect the rest of your system.
+
+          Your 'activated state' allows you to manage packages, scripts, secrets and more via the activestate.yaml file at the root of your project directory.
+
+          To manage packages use the `state packages` command. For more information about package management, use `state packages --help`. For more information about the State Tool use `state help`.
+
+          To access additional features of the ActiveState Platform and use a web-based interface for managing your project, you can visit https://platform.activestate.com/{{.Owner}}/{{.Project}}.
+
+          Edit your activestate.yaml to remove this message.
+          EOT
     events:
       # This is the ACTIVATE event, it will run whenever a new virtual environment is created (eg. by running `state activate`)
       # On Linux and macOS this will be ran as part of your shell's rc file, so you can use it to set up aliases, functions, environment variables, etc.
       - name: ACTIVATE
         value: $scripts.activationMessage.path()
-sample_yaml:
+sample_yaml_python:
   other: |
     scripts:
     # This script uses a secret. Note that you can define your own secrets at
@@ -1097,31 +1103,25 @@ sample_yaml:
       - name: helloWorld
         language: {{.Shell}}
         value: echo ${secrets.user.world}
+      - name: activationMessage
+        language: {{.Language}}
+        value: |
+          print(""" 
+          You are now in an 'activated state', this will give you a virtual environment to work in that doesn't affect the rest of your system.
+
+          Your 'activated state' allows you to manage packages, scripts, secrets and more via the activestate.yaml file at the root of your project directory.
+
+          To manage packages use the `state packages` command. For more information about package management, use `state packages --help`. For more information about the State Tool use `state help`.
+
+          To access additional features of the ActiveState Platform and use a web-based interface for managing your project, you can visit https://platform.activestate.com/{{.Owner}}/{{.Project}}.
+
+          Edit your activestate.yaml to remove this message.
+          """)
     events:
       # This is the ACTIVATE event, it will run whenever a new virtual environment is created (eg. by running `state activate`)
       # On Linux and macOS this will be ran as part of your shell's rc file, so you can use it to set up aliases, functions, environment variables, etc.
       - name: ACTIVATE
-        constraints: 
-          os: macos,linux 
-        value: |
-          echo "You are now in an 'activated state', this will give you a virtual environment to work in that doesn't affect the rest of your system."
-          echo ""
-          echo "Your 'activated state' allows you to define scripts, events and constants via the activestate.yaml file at the root of your project directory."
-          echo ""
-          echo "To expand your language and/or package selection, or to define client-side encrypted secrets, please visit https://platform.activestate.com/{{.Owner}}/{{.Project}}."
-          echo ""
-          echo "To try out scripts with client-side encrypted secrets we've created a simple script for you in your activestate.yaml, try it out by running 'helloWorld'"
-      - name: ACTIVATE
-        constraints: 
-          os: windows 
-        value: |
-          echo You are now in an 'activated state', this will give you a virtual environment to work in that doesn't affect the rest of your system.
-          echo. 
-          echo Your 'activated state' allows you to define scripts, events and constants via the activestate.yaml file at the root of your project directory.
-          echo. 
-          echo To expand your language and/or package selection, or to define client-side encrypted secrets, please visit https://platform.activestate.com/{{.Owner}}/{{.Project}}.
-          echo. 
-          echo To try out scripts with client-side encrypted secrets we've created a simple script for you in your activestate.yaml, try it out by running 'helloWorld'
+        value: $scripts.activationMessage.path()
 editor_yaml:
   other: |
     scripts:
