Make instructions more clear

--- a/locale/en-us.yaml
+++ b/locale/en-us.yaml
@@ -1682,4 +1682,4 @@ windows_compatibility_warning:
 prepare_instructions_lin_mac:
   other: "To add the global installations directory to your environment please add the line `export PATH={{.V0}}:$PATH` to your RC file"
 prepare_instructions_windows:
-  other: "To add the global installations directory to your environment please att the line path {{.V0}} to your user PATH in the System Properties dialog"
+  other: "To add the global installations directory to your environment please att the line path `{{.V0}}` to your user PATH in the System Properties dialog"
