Add back Deploy and Default env data vars

--- a/locale/en-us.yaml
+++ b/locale/en-us.yaml
@@ -1683,3 +1683,5 @@ prepare_instructions_lin_mac:
   other: "To add the global installations directory to your environment please add the line `export PATH={{.V0}}:$PATH` to your RC file"
 prepare_instructions_windows:
   other: "To add the global installations directory to your environment please add the path `{{.V0}}` to your user PATH in the System Properties dialog"
+prepare_env_warning:
+  other: Could not update user environment
