--- a/locale/en-us.yaml
+++ b/locale/en-us.yaml
@@ -1244,6 +1244,20 @@ package_version_update:
   other: "Package updated: {{.V0}}@{{.V1}}"
 package_ingredient_err:
   other: Failed to resolve an ingredient named {{.V0}}.
+package_headless_add_set_commit_err:
+  other: "Failed to add package: Could not write new commit ID to activestate.yaml."
+package_headless_update_set_commit_err:
+  other: "Failed to update package: Could not write new commit ID to activestate.yaml."
+package_headless_remove_set_commit_err:
+  other: "Failed to update package: Could not write new commit ID to activestate.yaml."
+package_headless_add:
+  other: "Package added: {{.V0}}"
+package_headless_update:
+  other: "Package updated: {{.V0}}"
+package_headless_remove:
+  other: "Package removed: {{.V0}}"
+package_headless_project_creation:
+  other: "For additional features like sharing your runtime, version control and much more, create a project from your commit at https://platform.activestate.com/commit/{{.V0}}."
 err_package_removed:
   other: Failed to remove package
 err_packages_removed:
