--- a/locale/en-us.yaml
+++ b/locale/en-us.yaml
@@ -1206,7 +1206,7 @@ err_cannot_remove_existing:
   other: "The already configured packages were not able to be overwritten"
 err_branch_not_bare:
   other: Branch is not bare and is unable to be initialized as such
-err_package_add:
+err_package_added:
   other: Failed to add package
 package_err_cannot_fetch_checkpoint:
   other: Cannot fetch checkpoint for package listing
@@ -1230,17 +1230,17 @@ package_name:
   other: Name
 package_version:
   other: Version
-package_add:
+package_added:
   other: "Package added: {{.V0}}"
-package_version_add:
+package_version_added:
   other: "Package added: {{.V0}}@{{.V1}}"
-err_package_update:
+err_package_updated:
   other: Failed to update package
 err_package_project_no_commit:
   other: Could not find commit for project {{.V0}}
-package_update:
+package_updated:
   other: "Package updated: {{.V0}}"
-package_version_update:
+package_version_updated:
   other: "Package updated: {{.V0}}@{{.V1}}"
 package_ingredient_err:
   other: Failed to resolve an ingredient named {{.V0}}.
