--- a/locale/en-us.yaml
+++ b/locale/en-us.yaml
@@ -1693,3 +1693,5 @@ prepare_instructions_windows:
   other: "To add the global installations directory to your environment please add the path `{{.V0}}` to your user PATH in the System Properties dialog"
 prepare_env_warning:
   other: Could not update user environment
+err_package_update_pjfile:
+  other: "Coult not update your activestate.yaml with the new commit ID. Please run `state pull` manually."
