--- a/locale/en-us.yaml
+++ b/locale/en-us.yaml
@@ -103,11 +103,11 @@ error_unsupported_shell:
 err_output_flag_value_invalid:
   other: Could not recognize output type
 info_reactivating:
-  other: "[BLUE]Reactivating state[/RESET]"
+  other: "[INFO]Reactivating state[/RESET]"
 info_deactivated:
-  other: "[BLUE]Deactivated {{.Owner}}/{{.Name}}[/RESET]"
+  other: "[INFO]Deactivated {{.Owner}}/{{.Name}}[/RESET]"
 info_deactivated_by_commit:
-  other: "[BLUE]Deactivated[/RESET]"
+  other: "[INFO]Deactivated[/RESET]"
 venv_installer_is_nil:
   other: Provided installer should not be nil
 error_unsupported_language:
@@ -161,9 +161,9 @@ err_artifact_no_parent:
 err_invalid_status_code:
   other: "Invalid status code: {{.V0}}"
 info_activating_state:
-  other: "[BLUE]Activating state: {{.Owner}}/{{.Name}}[/RESET]"
+  other: "[INFO]Activating state: {{.Owner}}/{{.Name}}[/RESET]"
 info_activating_state_by_commit:
-  other: "[BLUE]Activating state[/RESET]"
+  other: "[INFO]Activating state[/RESET]"
 info_state_active_repoexists:
   other: "Repo already exists: {{.Path}}"
 panic_couldnt_detect_wd:
@@ -749,7 +749,7 @@ err_command_requires_auth:
   other: You need to be authenticated to run this command. Authenticate by running `state auth`.
 warn_script_name_in_use:
   other: |
-    [YELLOW]The following script names are already in use:
+    [NOTICE]The following script names are already in use:
 
       - {{.V0}}
 
@@ -920,7 +920,7 @@ activate_namespace_location:
   other: Where would you like to checkout {{.V0}}?
 warn_deprecation:
   other: |
-    [YELLOW]You are running a deprecated version of the State Tool. This version will stop working as of {{.V0}}. 
+    [NOTICE]You are running a deprecated version of the State Tool. This version will stop working as of {{.V0}}. 
 
     Reason for deprecation: 
       {{.V1}}
@@ -928,7 +928,7 @@ warn_deprecation:
     Please update soon![/RESET]
 err_deprecation:
   other: |
-    [RED]You are running a version of the State Tool that is no longer supported! You will be encountering issues.
+    [ERROR]You are running a version of the State Tool that is no longer supported! You will be encountering issues.
 
     Reason for deprecation: 
       {{.V1}}
@@ -957,7 +957,7 @@ err_pull_get_latest_commit_id:
 err_os_not_a_directory:
   other: Expected '{{.V0}}' to be a valid directory
 unstable_version_warning:
-  other: "[YELLOW]The State Tool is currently in beta. We are actively changing and adding features based on developer feedback.[/RESET]"
+  other: "[NOTICE]The State Tool is currently in beta. We are actively changing and adding features based on developer feedback.[/RESET]"
 export_cmd_description:
   other: Print information based on the provided subcommand
 export_recipe_cmd_description:
@@ -983,7 +983,7 @@ export_config_flag_filter_description:
 export_config_dir_description:
   other: Export the config directory details
 export_apikey_user_notice:
-  other: "[BLUE]Note that this key is not stored by ActiveState. Please store the value for later use as you cannot retrieve it again.[/RESET]"
+  other: "[INFO]Note that this key is not stored by ActiveState. Please store the value for later use as you cannot retrieve it again.[/RESET]"
 err_apikey_name_required:
   other: An API key name is required.
 err_cannot_obtain_apikey:
@@ -1374,7 +1374,7 @@ namespace_label_platform:
 namespace_label_preplatform:
   other: "Bits"
 history_commit:
-  other: "[BLUE]commit {{.V0}}[/RESET]"
+  other: "[NOTICE]commit {{.V0}}[/RESET]"
 history_author:
   other: "Author: {{.V0}}"
 history_date:
@@ -1446,21 +1446,21 @@ err_order_bad_request:
 err_order_unknown:
   other: Unknown error resolving order"
 using_cached_env:
-  other: "[BLUE]Reusing cached runtime environment[/RESET]"
+  other: "[INFO]Reusing cached runtime environment[/RESET]"
 update_attempt:
   other: |
-    [BLUE]Updating state tool:  Downloading latest version of the state tool...[/RESET]
+    [INFO]Updating state tool:  Downloading latest version of the state tool...[/RESET]
 auto_update_to_version:
   other: |
-    [BLUE]Updated from [BOLD]{{.V0}}[/RESET] [BLUE]to[/RESET] [BOLD]{{.V1}}[/RESET].
-    [BLUE]To avoid auto updating run 'state update --lock' (only recommended for production environments).[/RESET]
+    [INFO]Updated from {{.V0}} to {{.V1}}[/RESET].
+    [INFO]To avoid auto updating run 'state update --lock' (only recommended for production environments).[/RESET]
 auto_update_permission_err:
   other: |
     Could not update to the latest available version of the state tool due to insufficient permissions.
     To manually update, run 'state update' as a privileged user.
     If you want the state tool to auto-update, please re-install it in a user-writable directory.
 forward_version:
-  other: "[BLUE]Using locked state tool version [BOLD]{{.V0}}[/RESET]."
+  other: "[INFO]Using locked state tool version {{.V0}}[/RESET]."
 err_project_env_file_not_exist:
   other: |
     Your activated environment appears to have been corrupted because the activestate.yaml cannot be found anymore.
@@ -1485,16 +1485,16 @@ err_deploy_run_install:
 err_deploy_path_noperm:
   other: "No permission to create symlinks on any of the PATH entries: {{.V0}}"
 deploy_install:
-  other: "[BLUE]Installing Runtime Environment[/RESET]"
+  other: "[INFO]Installing Runtime Environment[/RESET]"
 deploy_configure_shell:
-  other: "[BLUE]Configuring shell: {{.V0}} (set the SHELL environment variable to use a different shell)[/RESET]"
+  other: "[INFO]Configuring shell: {{.V0}} (set the SHELL environment variable to use a different shell)[/RESET]"
 deploy_symlink:
-  other: "[BLUE]Symlinking executables to: {{.V0}}[/RESET]"
+  other: "[INFO]Symlinking executables to: {{.V0}}[/RESET]"
 deploy_overwrite_target:
   other: "Overwriting existing target: {{.V0}}"
 deploy_info:
   other: |
-    [BLUE]Deployment Information:[/RESET]
+    [INFO]Deployment Information:[/RESET]
     This information is provided for your reference, for most common use-cases you do not need to do anything with this.
 deploy_cmd_description:
   other: |
@@ -1516,12 +1516,12 @@ field_environment:
 deploy_restart_shell:
   other: |
 
-    [BLUE][BOLD]Please restart your terminal or start a new terminal session in order to start using the newly configured Runtime Environment.[/RESET]
+    [NOTICE]Please restart your terminal or start a new terminal session in order to start using the newly configured Runtime Environment.[/RESET]
 deploy_restart_cmd:
   other: |
 
-    [BLUE][BOLD]Please log out and back in again in order to start using the newly configured Runtime Environment.[/RESET]
-    [BLUE][BOLD]Alternatively, you can run `setenv` from the installation directory to update your environment[/RESET]
+    [NOTICE]Please log out and back in again in order to start using the newly configured Runtime Environment.[/RESET]
+    [NOTICE]Alternatively, you can run `setenv` from the installation directory to update your environment[/RESET]
 flag_state_deploy_path_description:
   other: The path to deploy the runtime installation files to. This directory will not be affected by 'state clean'
 flag_state_deploy_force_description:
@@ -1589,23 +1589,23 @@ ppm_print_main:
     See "https://docs.activestate.com/platform/state/" for details.
 ppm_print_forward:
   other: |
-    Your command is being forwarded to `[BOLD][BLUE]{{.V0}}[/RESET]`.
-    In the future you can run `[BOLD][BLUE]{{.V0}}[/RESET]` directly instead of running `[BOLD][BLUE]{{.V1}}[/RESET]`, which will soon be deprecated.
+    Your command is being forwarded to `[ACTIONABLE]{{.V0}}[/RESET]`.
+    In the future you can run `[ACTIONABLE]{{.V0}}[/RESET]` directly instead of running `[ACTIONABLE]{{.V1}}[/RESET]`, which will soon be deprecated.
 ppm_print_forward_after_convert:
   other: |
-    Please navigate to your newly created project directory and run `[BOLD][BLUE]{{.V1}}[/RESET]` again.
-    You can also run `[BOLD][BLUE]{{.V0}}[/RESET]` directly instead of running `[BOLD][BLUE]{{.V1}}[/RESET]`, which will soon be deprecated.
+    Please navigate to your newly created project directory and run `[ACTIONABLE]{{.V1}}[/RESET]` again.
+    You can also run `[ACTIONABLE]{{.V0}}[/RESET]` directly instead of running `[ACTIONABLE]{{.V1}}[/RESET]`, which will soon be deprecated.
 ppm_print_forward_failure:
   other: |
-    Your command is being forwarded to `[BOLD][BLUE]{{.V0}}[/RESET]`.
-    In the future you can run `[BOLD][BLUE]{{.V0}}[/RESET]` directly instead of running `[BOLD][BLUE]{{.V1}}[/RESET]`, which will soon be deprecated.
+    Your command is being forwarded to `[ACTIONABLE]{{.V0}}[/RESET]`.
+    In the future you can run `[ACTIONABLE]{{.V0}}[/RESET]` directly instead of running `[ACTIONABLE]{{.V1}}[/RESET]`, which will soon be deprecated.
 
-    Note that `[BOLD][BLUE]{{.V0}}[/RESET]` is not a direct analog for `[BOLD][BLUE]{{.V1}}[/RESET]` and your command may have failed as a result.
-    Please run `[BOLD][BLUE]{{.V0}} --help[/RESET]` for further information on how to use it for your use-case.
+    Note that `[ACTIONABLE]{{.V0}}[/RESET]` is not a direct analog for `[ACTIONABLE]{{.V1}}[/RESET]` and your command may have failed as a result.
+    Please run `[ACTIONABLE]{{.V0}} --help[/RESET]` for further information on how to use it for your use-case.
 ppm_print_area_redundant:
   other: |
     `ppm area` and its subcommands have been made redundant thanks to State Tool's use of virtual environments.
-    You can simply start managing your packages, run `[BOLD][BLUE]{{.V0}} --help[/RESET]` for more information.
+    You can simply start managing your packages, run `[ACTIONABLE]{{.V0}} --help[/RESET]` for more information.
 ppm_install_intent:
   other: add new packages to your project 
 ppm_upgrade_intent:
@@ -1632,7 +1632,7 @@ ppm_list_intent:
   other: list the packages installed for a project
 deploy_usable_path:
   other: |
-    [YELLOW]Please ensure '{{.V0}}' exists and is on your PATH.[/RESET]
+    [NOTICE]Please ensure '{{.V0}}' exists and is on your PATH.[/RESET]
 script_watcher_watch_file:
   other: "Watching file changes at: {{.V0}}"
 confirm_exit_on_error_prompt:
@@ -1653,11 +1653,11 @@ tutorial_newproject_outro:
   other: |
     Your Virtual Runtime Environment has been created.
     [[BR]][[BR]]
-    To start using your project simply run `[BOLD][BLUE]state activate[/RESET]` from your project directory at [BOLD][BLUE]{{.Dir}}[/RESET].
-    You can also manage your project in your browser at [BOLD][BLUE]{{.URL}}[/RESET].
+    To start using your project simply run `[ACTIONABLE]state activate[/RESET]` from your project directory at [ACTIONABLE]{{.Dir}}[/RESET].
+    You can also manage your project in your browser at [ACTIONABLE]{{.URL}}[/RESET].
     [[BR]][[BR]]
-    To create another project run `[BOLD][BLUE]state init[/RESET]`, or if you want to find out more about the State Tool and what it can do
-    run `[BOLD][BLUE]state --help[/RESET]` or check out [BOLD][BLUE]{{.Docs}}[/RESET]
+    To create another project run `[ACTIONABLE]state init[/RESET]`, or if you want to find out more about the State Tool and what it can do
+    run `[ACTIONABLE]state --help[/RESET]` or check out [ACTIONABLE]{{.Docs}}[/RESET]
 ppm_convert_after_tutorial:
   other: |
     For your convenience you can continue to use ppm commands once you've activated your virtual runtime environment.
@@ -1710,4 +1710,4 @@ prepare_env_warning:
 prepare_protocol_warning:
   other: Could not add state protocol
 err_package_update_pjfile:
-  other: "Coult not update your activestate.yaml with the new commit ID. Please run `state pull` manually."
+  other: "Could not update your activestate.yaml with the new commit ID. Please run `state pull` manually."
